--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,7 @@
     <color name="statusBar">#2fd11a</color>
     <color name="toast_bg">#dddfe0</color>
     <color name="toast_text">#5f5f5f</color>
+    <color name="moire_a">#1a58b4</color>
+    <color name="moire_b">#17b3e7</color>
+    <color name="white">#ffffff</color>
 </resources>
