RecyclerView添加分割线(Add recyclerView line )

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="moire_a">#1a58b4</color>
     <color name="moire_b">#17b3e7</color>
     <color name="white">#ffffff</color>
+    <color name="color_0079BE">#0079BE</color>
 </resources>
